# spreadsheet-tamer

./: .gitignore  .gitlab-ci.yml  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
datagenius/: __init__.py  config.py  dataset.py  element.py  gconfig.py  genius.py  metadata.py  parsers.py  tms_registry.py  util.py
datagenius/_config_files/: config.yml
datagenius/io/: __init__.py  odbc.py  reader.py  text.py
datagenius/lib/: __init__.py  clean.py  explore.py  guides.py  preprocess.py  reformat.py  service.py  supplement.py
datagenius/names/: __init__.py  df_tms.py  name.py  namestring.py  nametoken.py  patterns.py  util.py
tamer/: __init__.py  decorators.py  frameutils.py  guide.py  header.py  iterutils.py  iterutils.pyi  metadata.py  resolutions.py  schema.py  type_handling.py
tamer/config/: config.py  patterns.py
tamer/explorer/: old_tms.py
tamer/names/: df_tms.py  name.py  namestring.py  nametoken.py
tamer/numerics/: util.py  zero_numeric.py
tamer/resolvers/: preprocessor.py  resolver.py
tamer/strings/: string_util.py  util.py
tests/: conftest.py  dataset_test.py  decorators_test.py  element_test.py  frameutils_test.py  gconfig_test.py  genius_test.py  guide_test.py  header_test.py  iterutils_test.py  metadata_test.py  parsers_test.py  resolutions_test.py  schema_test.py  testing_tools.py  type_handling_test.py  util.py  util_test.py
tests/config/: config_test.py  patterns_test.py
tests/explorer/: old_tests.py
tests/io/: odbc_test.py  reader_test.py  test_odbc.py  (+1 more)
(+33 files in other folders)
