[tool.poetry]
name = "spreadsheet-tamer"
version = "0.7.4"
description = """ 
    A suite of tools designed to reduce the pain of exploring, cleaning, and 
    standardizing the data in human-produced spreadsheets.
    """
authors = ["Chris Larabee <chris.larabee9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xlrd = "1.2.0"
recordlinkage = "^0.14"
pandas = "^1.2.1"
google-api-python-client = "^1.12.8"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.2"
oauth2client = "^4.1.3"
PyYAML = "^5.4.1"
numpy = "^1.20.0"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
wheel = "^0.36.2"
flake8-black = "^0.2.1"
rope = "^0.18.0"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
